Solved svg rendering on firefox mobile in get involbed page

--- a/styles/get-involved.css
+++ b/styles/get-involved.css
@@ -239,3 +239,8 @@ section:nth-child(5) .button.flat.suggested-action:focus {
         margin: 24px 0;
     }
 }
+@media (max-width: 600px) {
+    .svg {
+        width: 100%;
+    }
+}
